Resolvida redundancia nas chamadas de API Externa, refatoração de testes e alguns métodos.